--- a/talk/talk_towards_open_science.tex
+++ b/talk/talk_towards_open_science.tex
@@ -56,8 +56,8 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 \begin{frame}{The Scientific Method}
 
 \begin{itemize}
-\item systematic observation, measurement, and experiment
 \item formulation, testing, and modification of hypotheses
+\item systematic observation, measurement, and experiment
 \item reproducibility
 \end{itemize}
 
@@ -87,7 +87,8 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 \begin{columns}[T]
 \begin{column}{.55\linewidth}
 
-\begin{itemize}
+\setbeamercovered{invisible}
+\begin{itemize}[<+->]
 \item[$\square$] myself
 \item[$\square$] my future self
 \item[$\square$] my colleagues
@@ -422,19 +423,19 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 
 \vfill
 
+\textbf{Challenges}
+\begin{itemize}
+\item initial effort (e.g. training)
+\item missing versioning tool/platform for (large) data bases
+\end{itemize}
+
+\vfill
+
 \textbf{Benefits}
 \begin{itemize}
 \item documentation/clean up/discussions for public release
 \item bug reports, positive community feedback
 \item potentially more citations {\tiny [Brody 2006]}
-\end{itemize}
-
-\vfill
-
-\textbf{Challenges}
-\begin{itemize}
-\item initial effort (e.g. training)
-\item missing versioning tool/platform for (large) data bases
 \end{itemize}
 
 \end{frame}
