Typesetting of reference

--- a/talk/talk_towards_open_science.tex
+++ b/talk/talk_towards_open_science.tex
@@ -362,7 +362,7 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 
 \textbf{Recommendations}
 \begin{itemize}
-\item Reproducible Research Standard (RRS) [Stodden, 2009]
+\item Reproducible Research Standard (RRS) {\tiny [Stodden, 2009]}
 \item ...
 \end{itemize}
 
@@ -451,13 +451,20 @@ $^2$ Filmuniversität Babelsberg \emph{KONRAD WOLF}}
 \item training and qualification required
 \end{itemize}
 
-\vfill
+\vspace{8mm}
 
+\begin{columns}[T]
+\begin{column}{.45\linewidth}
 {\large
-\url{https://github.com/spatialaudio}\\[1ex]
-\url{https://github.com/twoears}\\[1ex]
-\url{http://spatialaudio.net}
+\url{github.com/spatialaudio}\\[1ex]
+\url{github.com/twoears}\\[1ex]
+\url{spatialaudio.net}
 }
+\end{column}
+\begin{column}{.4\linewidth}
+\includegraphics[scale=.19]{repository}
+\end{column}
+\end{columns}
 
 \end{frame}
 
