Removed symbolic link

--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -1,1 +1,274 @@
-/Users/spors/Documents/latex/Bib/open_science.bib
+@Misc{TOPGuidelines,
+author = {{The TOP Guidelines Committe}},
+title = {Promoting an Open Research Culture: The TOP Guidelines for Journals},
+note = {Version 2, 27.6.2015},
+}
+
+@Misc{Forschungsdaten:AddW,
+author = {{Allianz der deutschen Wissenschaftsorganisationen}},
+title = {Grundsätze zum Umgang mit Forschungsdaten},
+note = {Verabschiedet am 24.6.2010},
+}
+
+@Article{Stodden2014:JORS,
+author = {Stodden, Victoria and Miguez, Sheila},
+title = {Best Practices for Computational Science: Software Infrastructure and Environments for Reproducible and Extensible Research},
+journal = {Journal of open research software},
+year = {2014},
+volume = {2},
+number = {1},
+pages = {1-6},
+}
+
+@Article{Stodden2013:PLOS1,
+author = {Stodden, Victoria and Guo, Peixuan and Ma, Zhaokun},
+title = {Toward Reproducible Computational Research: Empirical Anaysis of Data and Code Policy Adoption by Journals},
+journal = {PLOS ONE},
+year = {2013},
+volume = {8},
+number = {6},
+pages = {1-8},
+}
+
+@Misc{Stodden2014:talk,
+author = {Stodden, Victoria},
+title = {Resolving Reproducibility in Computational Science: Tools, Policy, and Culture},
+year = {2014},
+month = {10},
+note = {Talk given at the University of Arizona},
+}
+
+@Article{Donoho:CSE,
+author = {Shahram, Morteza and Stodden, Victoria and Donoho, David L. and Maleki, Arian and Rahman, Inam Ur},
+title = {15 Years of Reproducible Research in Computational Harmonic Analysis},
+journal = {Computing in Science and Engineering},
+year = {2009},
+volume = {11},
+number = {1},
+pages = {8-18},
+}
+
+@Article{leveque:CSE,
+author = {LeVeque, Randall J. and Mitchell, Ian M. and Stodden, Victoria},
+title = {Reproducible Research for Sientific Computing: Tools and Strategies for Changing the Culture},
+journal = {Computing in Science and Engineering},
+year = {2012},
+volume = {14},
+number = {4},
+pages = {13-17},
+}
+
+@Article{Fomel:CSE,
+author = {Fomel, Sergey},
+title = {Reproducible Research as a Community Effort: Lessons from the Madagascar Project},
+journal = {Computing in Science and Engineering},
+year = {2015},
+volume = {17},
+number = {1},
+pages = {20-26},
+}
+
+@Misc{SVN:WWW,
+title = {Apache Subversion},
+howpublished = {\url{https://subversion.apache.org}},
+}
+
+@Misc{git:WWW,
+title = {git},
+howpublished = {\url{https://git-scm.com}},
+}
+
+@Misc{sharepoint:WWW,
+title = {Microsoft SharePoint},
+howpublished = {\url{https://en.wikipedia.org/wiki/SharePoint}},
+}
+
+@Misc{H2020_FAIR:ERC,
+author = {{European Research Commission}},
+title = {H2020 Programme: Guidelines of FAIR Data Management in Horizon 2020},
+note = {Version 3.0, 26.7.2016},
+}
+
+@Misc{OA_Declaration:MPG,
+title = {Berlin Declaration on Open Access to Knowledge in the Sciences and Humanities},
+howpublished = {\url{https://openaccess.mpg.de/Berliner-Erklaerung}},
+note = {Accessed 8.11.2016},
+}
+
+@Misc{forschungsdaten.org:WWW,
+title = {Forschungsdaten.org},
+howpublished = {\url{http://www.forschungsdaten.org}},
+note = {Accessed 10.11.2016},
+}
+
+
+@Misc{HRK_FDM:WWW,
+author = {Hochschulrektorenkonferenz},
+title = {Management von Forschungsdaten - eine zentrale strategische Herausforderung für Hochschulleitungen},
+howpublished = {\url{https://www.hrk.de/positionen/gesamtliste-beschluesse/position/convention/management-von-forschungsdaten-eine-zentrale-strategische-herausforderung-fuer-hochschulleitungen}},
+note = {Verabschiedet am 13.5.2014},
+}
+
+@Misc{redmine:WWW,
+title = {Redmine},
+howpublished = {\url{http://www.redmine.org}},
+}
+
+@Misc{SEEK:WWW,
+title = {SEEK for Science},
+howpublished = {\url{http://www.seek4science.org}},
+}
+
+@Misc{re3data:WWW,
+title = {re3data.org},
+howpublished = {\url{http://www.re3data.org}},
+}
+
+@Misc{github:WWW,
+title = {GitHub},
+howpublished = {\url{http://www.github.com}},
+}
+
+@Misc{zenodo:WWW,
+title = {zenodo},
+howpublished = {\url{https://zenodo.org}},
+}
+
+@Book{Borgwardt:Book,
+author = {Borgwardt, Angela},
+title = {Wissenschaft auf Abwegen? Zum drohenden Qualitätsverlust in der Wissenschaft},
+publisher = {Friedrich-Ebert-Stiftung},
+year = {2014},
+}
+
+@Book{DFG_GWP:Book,
+title = {Sicherung guter wissenschaftlicher Praxis},
+publisher = {Deutsche Forschungsgemeinschaft},
+year = {2013},
+}
+
+@Book{INT_OER:Book,
+author = {Butcher, Neil},
+title = {A Basic Guide to Open Educational Resources (OER)},
+publisher = {Commonwealth of Learning and UNESCO},
+year = {2011},
+pages = {1-22},
+}
+
+@inproceedings{Vrana15:MIPRO,
+	author = {Vrana, Radovan},
+	title = {Open science, open access and open educational resources: Challenges and opportunities},
+	booktitle = {Information and Communication Technology, Electronics and Microelectronics (MIPRO)},
+	year = {2015},
+	venue = {Opatija, Croatia},
+	month = {May},
+	pages = {886-890},
+	doi = {10.1109/MIPRO.2015.7160399},
+}
+
+@article{Vandewalle09:SPM,
+  title={Reproducible Research in Signal Processing},
+  author={Vandewalle, Patrick and Kovacevic, Jelena and Vetterli, Martin},
+  journal={IEEE Signal Processing Magazine},
+  pages={37--47},
+  year={2009},
+  month = {May},
+}
+
+@article{Kousta16:PLOS,
+  title={Meta-Research: Broadening the Scope of PLOS Biology},
+  author={Kousta, S. and Ferguson, C. and Ganley, E.},
+  journal={PLoS Biology},
+  year={2016},
+  volume={14},
+  issue={1},
+  doi = {doi:10.1371/journal.pbio.1002334},
+}
+
+@Misc{retraction:WWW,
+title = {Retraction Watch},
+howpublished = {\url{http://retractionwatch.com}},
+note = {Accessed 24.11.2016},
+}
+
+@article{ioannidis05:PLOS,
+  title={Why most published research findings are false},
+  author={Ioannidis, John PA},
+  journal={PLoS Medicine},
+  volume={2},
+  number={8},
+  year={2005},
+  publisher={Public Library of Science}
+}
+
+@article{open15:AAAS,
+  title={Estimating the reproducibility of psychological science},
+  author={Open Science Collaboration and others},
+  journal={Science},
+  volume={349},
+  number={6251},
+  year={2015},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{chalmers09:OG,
+  title={Avoidable waste in the production and reporting of research evidence},
+  author={Chalmers, Iain and Glasziou, Paul},
+  journal={Obstetrics \& Gynecology},
+  volume={114},
+  number={6},
+  pages={1341--1345},
+  year={2009},
+  publisher={LWW}
+}
+
+@article{freedman15:PLOS,
+  title={The economics of reproducibility in preclinical research},
+  author={Freedman, Leonard P and Cockburn, Iain M and Simcoe, Timothy S},
+  journal={PLoS Biology},
+  volume={13},
+  number={6},
+  year={2015},
+  publisher={Public Library of Science}
+}
+
+@article{howells14:Nature,
+  title={Bringing rigour to translational medicine},
+  author={Howells, David W and Sena, Emily S and Macleod, Malcolm R},
+  journal={Nature Reviews Neurology},
+  volume={10},
+  number={1},
+  pages={37--43},
+  year={2014},
+  publisher={Nature Publishing Group}
+}
+
+@Misc{INT_SPVA:rep,
+title = {Public Repository of the Signal Processing and Virtual Acoustics Group, University of Rostock},
+howpublished = {\url{https://github.com/spatialaudio}},
+}
+
+@Misc{INT_SFST:rep,
+title = {The Sound Field Synthesis Toolbox},
+howpublished = {\url{https://github.com/spatialaudio}},
+}
+
+@Misc{INT_SSR:WWW,
+title = {The SoundScape Renderer},
+howpublished = {\url{http://spatialaudio.net/ssr}},
+}
+
+@Misc{INT_2ears:rep,
+title = {Public Repository of the two!ears Project},
+howpublished = {\url{https://github.com/TWOEARS}},
+}
+
+@Misc{INT_CC,
+title = {Crative Commons},
+howpublished = {\url{https://creativecommons.org}},
+}
+
+@Misc{INT_osf,
+title = {Open Science Framework},
+howpublished = {\url{https://osf.io}},
+}
