Text for section Open Science

--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -243,32 +243,92 @@ note = {Accessed 24.11.2016},
   publisher={Nature Publishing Group}
 }
 
-@Misc{INT_SPVA:rep,
+@Misc{SPVA:rep,
 title = {Public Repository of the Signal Processing and Virtual Acoustics Group, University of Rostock},
 howpublished = {\url{https://github.com/spatialaudio}},
 }
 
-@Misc{INT_SFST:rep,
+@Misc{SFST:rep,
 title = {The Sound Field Synthesis Toolbox},
 howpublished = {\url{https://github.com/spatialaudio}},
 }
 
-@Misc{INT_SSR:WWW,
+@Misc{SSR:WWW,
 title = {The SoundScape Renderer},
 howpublished = {\url{http://spatialaudio.net/ssr}},
 }
 
-@Misc{INT_2ears:rep,
+@Misc{two!ears:rep,
 title = {Public Repository of the two!ears Project},
 howpublished = {\url{https://github.com/TWOEARS}},
 }
 
-@Misc{INT_CC,
+@Misc{CC,
 title = {Crative Commons},
 howpublished = {\url{https://creativecommons.org}},
 }
 
-@Misc{INT_osf,
+@Misc{OSF,
 title = {Open Science Framework},
 howpublished = {\url{https://osf.io}},
+}
+
+@incollection{scientific_method:OXD,
+title = {Scientific Method},
+booktitle = {Oxford Dictionaries: British and World English},
+year = 2016,
+note = {retrieved 28 May 2016},
+url = {https://en.oxforddictionaries.com/definition/scientific_method},
+}
+
+@article{Leek15:PNAS,
+  title={Opinion: Reproducible research can still be wrong: Adopting a prevention approach},
+  author={Leek, Jeffrey T and Peng, Roger D},
+  journal={Proceedings of the National Academy of Sciences of the United States of America},
+  volume={112},
+  number={6},
+  pages={1645--1646},
+  year={2015},
+}
+
+@inproceedings{Pontika15:ACM,
+ author = {Pontika, Nancy and Knoth, Petr and Cancellieri, Matteo and Pearce, Samuel},
+ title = {Fostering Open Science to Research Using a Taxonomy and an eLearning Portal},
+ booktitle = {Proceedings of the 15th International Conference on Knowledge Technologies and Data-driven Business},
+ year = {2015},
+ location = {Graz, Austria},
+ pages = {11:1--11:8},
+ url = {http://doi.acm.org/10.1145/2809563.2809571},
+ doi = {10.1145/2809563.2809571},
+} 
+
+@techreport{Reproducibility15:AMS,
+  author = {},
+  title = {Reproducibility and reliability of biomedical research: improving research practice},
+  institution = {The Academy of Medical Sciences},
+  year = {2015},
+}
+
+@book{Albagli15:Book,
+editor = {Albagli, Sarita and Maciel, Maria Lucia and Abdo, Alexandre Hannud},
+title = {Open Science, open issues},
+publisher = {},
+year = {2015},
+}
+
+@article{Kraker11:TEL,
+  title={The case for an open open science in technology enhanced learning},
+  author={Kraker, Peter and Leony, Derick and Reinhardt, Wolfgang and Beham, Günter},
+  journal={International Journal Technology of Enhanced Learning},
+  volume={3},
+  number={6},
+  pages={643--654},
+  year={2011},
+}
+
+@article{Ford13:LFP,
+  title={Defining and Characterizing Open Peer Review: A Review of the Literature},
+  author={Ford, Emily},
+  journal={Library Faculty Publications and Presentations, Portland State University},
+  year={2013},
 }
