--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -45,32 +45,42 @@ $^2$ \emph{\small Filmuniversität Babelsberg KONRAD WOLF}}
 \thispagestyle{empty}           % weder Kopf- noch Fußzeile auf Folgeseiten
 
 % ================================================================================
-\section*{Introduction} \label{sec:intro} 
+\section*{The Scientific Method} \label{sec:intro} 
 
+Before discussing the Open Science approach in detail its worthwhile to review the
+foundations of the scientific method underlying research results. It may be defined 
+as \emph{'A method of procedure that has characterized natural science since the 17th 
+century, consisting in systematic observation, measurement, and experiment, and the 
+formulation, testing, and modification of hypotheses.'}~\cite{scientific_method:OXD}.
 The reproducibility of results is one of the main principles of the scientific method. 
-The irreproducibility of a wide range of scientific results has recently drawn significant 
-attention. Besides problems in the research methods themselves, results were often not 
-reproducible since necessary supplementary material as protocols, data and implementations 
-were not available. Another issue is the lacking availability of data for further 
-research by third parties. In many cases only the published results are available to 
-other researchers. Open Science focuses on the ease of access and reproducibility of 
-scientific results. This contribution introduces the concept of reproducibility and 
-addresses common concerns. Best practices for Open Science in acoustics research are 
-discussed and illustrated at examples.
+It may be defined as \emph{'Reproducibility is the ability of an entire analysis of 
+an experiment or study to be duplicated, either by the same researcher or by someone 
+else working independently, whereas reproducing an experiment is called replicating 
+it.'}~\cite{Leek15:PNAS}. 
+The irreproducibility of a wide range of scientific results has drawn significant 
+attention in the last decade~\cite{Borgwardt:Book,retraction:WWW,ioannidis05:PLOS, open15:AAAS, chalmers09:OG, freedman15:PLOS, howells14:Nature}. 
+In order to track down the problem the application areas of the scientific method have been
+classified into the three following branches~\cite{Donoho:CSE, Stodden2014:talk}:
+\begin{enumerate}
+\item deductive
+\item empirical
+\item computational
+\end{enumerate}
+The deductive branch covers results derived e.g. by formal logic and mathematics, the empirical
+branch e.g. statistical analysis of controlled experiments. The first two are traditional branches, 
+while the last one is a potentially new branch. It covers results derived by large-scale simulations
+and data-driven computational science. The measures that have to be taken to ensure reproducibilitly
+in the traditional are quite well known. This does not hold for the third, computational, branch.
 
+Besides problems in the research methods themselves, results are often not reproducible since 
+necessary supplementary material as protocols, data and implementations are not available. In 
+many cases only the published results are available to other researchers. Open Science 
+focuses on the ease of access of scientific data and therefore supports the ease of 
+reproducibility.
 
-% ================================================================================
-\section*{The Scientific Method} \label{sec:method}
-
-\begin{itemize}
-\item short intro into the scientific method
-\item the three/four branches according to\cite{Donoho:CSE, Stodden2014:talk}
-\item the problem of reproducibility
-\item one potential countermeasure: open science
-\end{itemize}
-
-Alternative view: who should benefit from my research?
-
+An alternative view on the problem of reproducibility is given by asking 
+\textbf{who should benefit from my research}? Potential answers to this question ordered by 
+the degree of required reproducibilitly are:
 \begin{itemize}
 \item[$\square$] myself
 \item[$\square$] my future self
@@ -84,36 +94,97 @@ Alternative view: who should benefit from my research?
 % ================================================================================
 \section*{Open Science} \label{sec:open_science} 
 
+Open Science bases on the general demand for socialization of knowledge. More specifically, 
+it aims at making the research process transparent on all levels. The advent of scientific 
+journals can be seen as a first step towards openness. Open Science has been discussed on
+a broad level in the last decade. However the exact meaning of the term is still not fully 
+settled. Many measures are discussed to achieve transparency in the research process~\cite{Pontika15:ACM,Reproducibility15:AMS,Albagli15:Book,Vrana15:MIPRO,Kraker11:TEL}. 
+We review the most common elements in the following, followed by application examples in
+the context of a listening experiment.
+
+
 % ................................................................................
 \paragraph*{Elements of Open Science}
 
-The elements of open science \cite{}
-\begin{enumerate}
-\item Open Source
-\item Open (Science) Data
-\item Open Access
-\item Open Methodology
-\item Open Notebook Science
-\item Open Educational Resources
-\item Open Peer Review
-\item Open Research (?)
-\end{enumerate}
+The various measures used to gain open and transparent science may be classified as
+follows:
+\begin{itemize}
+\item \textbf{Open Source}\\
+Availability of source code of implementations used in the research process, e.g. for numerical simulations.
+%
+\item \textbf{Open (Science) Data}\\
+Availability of the data underlying the research, whereas data does not only refer to electronic resources but also
+to protocols, samples, etc.
+%
+\item \textbf{Open Access}\\
+Free access to published research output, e.g. articles.
+%
+\item \textbf{Open Methodology}\\
+Detailed documentation of the methodology underlying the research.
+%
+\item \textbf{Open Notebook Science}\\
+Availability of the primary record of research results, e.g. laboratory notebooks or detailed mathematical derivations.
+%
+\item \textbf{Open Educational Resources}\\
+Free accessible resources for teaching, learning and research.
+\item \textbf{Open Peer Review}~\cite{Ford13:LFP}\\
+Refers to various transparency in the peer review process, e.g. crowdsourced review.
+\end{itemize}
+
 
 % ................................................................................
-\paragraph*{Example}
+\paragraph*{Example -- Listening Experiment}
 
-Perceptual study as example of usage of open science elements:
+The workflow of a typical perceptual experiment serves as an example for the usage of 
+the different elements of open science. A perceptual study may be decomposed into the
+following stages:
 
 \begin{enumerate}
-\item Idea
-\item Design of Experiment
-\item Computation
-\item Experiment
-\item Analysis
-\item Manuscript
-\item Pre-Publication Peer Review
-\item Publication
-\item Aftermath
+\item \textbf{Idea}\\
+The results of a preceding experiment or a discussion among colleagues is often the advent 
+for new research projects. These ideas reveal for instance the motivation behind the research. 
+Publishing the ideas as \underline{Open Notebook Science} makes them accessible to the public.
+%
+\item \textbf{Design of Experiment}\\
+The experiment is designed on basis of the initial idea. This involves for instance the formulation 
+of a hypothesis, the definition of a procedure, stimuli and subjects. \underline{Open Methodology} makes
+the design available.
+%
+\item\textbf{Computation}\\
+The generation of stimuli may involve mathematical deviations for numerical simulations, the 
+implementation of signal processing, control logic and graphical user interface, as well as input data. These
+can be made available in the sake of \underline{Open Notebook Science}, \underline{Open Data} and \underline{Open Source}.
+%
+\item \textbf{Experiment}\\
+The experiment is then conducted in the next step and the responses are collected from the test subject. This
+constitutes raw data which is processed later. The data can be published as \underline{Open Data} as long as
+no privacy issues are raised.
+%
+\item \textbf{Analysis}\\
+The statistical analysis of the raw data is the basis of the generalization of the individual results. This may
+involve the anonymization and outlier removal as first steps. The analysis can be published using the elements
+\underline{Open Methodology}, \underline{Open Source} and \underline{Open Data}.
+%
+\item \textbf{Manuscript}\\
+The design and the results of the perceptual study are compiled into a manuscript for publication. It is composed
+from text, references and visualization of the analyzed results. The manuscript may be published as \underline{Open Access}.
+%
+\item \textbf{Pre-Publication Peer Review}\\
+The publication process typically involves some kind of quality assessment. The manuscript is evaluated by
+independent researchers who provide ratings and suggestions for improvement. If accepted the manuscript is
+the revised on this basis. The peer review process can be made transparent using the elements of \underline{Open Peer Review}.
+%
+\item \textbf{Publication}\\
+After successful incorporation of comments from the pre-publication peer review the manuscript is ready for
+publication. It may be accompanied by supplementary material in order to improve the ease of reproducibility. In the
+case of conference papers a presentation may be given which contains other or additional. The elements involved
+for publication are \underline{Open Access}, \underline{Open Source} and \underline{Open Data}.
+%
+\item \textbf{Aftermath}\\
+After publication, the presented research may be replicated by others. Post-publication
+review will rate the significance of the research. Feedback from this
+may require to publish an errata or revise the underlying data and code. Finally open questions
+may bring up ideas for the next research project.
 \end{enumerate}
 
 % ================================================================================
