Section on Copyright and Licenses

--- a/paper/open_science.bib
+++ b/paper/open_science.bib
@@ -332,3 +332,20 @@ year = {2015},
   journal={Library Faculty Publications and Presentations, Portland State University},
   year={2013},
 }
+
+@Book{Kreuzer14:Book,
+author = {Kreuzer, Till},
+title = {Open Content  - A Practical Guide to Using Creative Commons Licences},
+publisher = {German Commission for UNESCO},
+year = {2014},
+}
+
+@article{Stodden09:CSE,
+author = {Stodden, Victoria},
+title = {The Legal Framework for Reproducible Scientific Research - Licensing and Copyright},
+journal = {Computing in Science and Engineering},
+year = {2009},
+volume = {11},
+number = {1},
+pages = {35-40},
+}
