--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -187,8 +187,23 @@ may require to publish an errata or revise the underlying data and code. Finally
 may bring up ideas for the next research project.
 \end{enumerate}
 
+
 % ================================================================================
 \section*{Copyright and Licenses} \label{sec:copyright}
+
+Licenses are an important aspect of open science. Scientific data that is made 
+available to the public has to be accompanied by a clear license statement. Otherwise
+the situation concerning copyright and reuse is unclear. The legal implications are
+rather complex, hard to oversee and country dependent in this case. The community offers
+a wide variety of licensing frameworks which are of use for open science. In general different 
+licenses are used for data, text, images, artwork and code. For the former the family of 
+creative commons (CC) licenses~\cite{CC} is a good choice~\cite{Kreuzer14:Book}. For the
+latter various license models are used, for instance the GNU General Public License (GPL), 
+BSD or MIT License, to name a few.
+
+The chosen license model should be as less restrictive as possible in order to promote the
+re-use. In order to aid in the selection of an appropriate licensing strategy, recommendations
+for open science have been given~\cite{Stodden09:CSE,}.
 
 
 % ================================================================================
@@ -223,8 +238,9 @@ Principles \cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}
 \begin{itemize}
 \item reproducibility is essential for the scientific method
 \item Open Science by itself does not ensure the ease of reproducibility
-\item institutional evaluation measures contradict scientific innovation
+\item institutional evaluation measures contradict scientific innovation, attribution
 \item training and qualification required
+\item FAIR policy
 \end{itemize}
 
 
