Section Management of Research Data

--- a/paper/towards_open_science_in_acoustics.tex
+++ b/paper/towards_open_science_in_acoustics.tex
@@ -209,14 +209,27 @@ for open science have been given~\cite{Stodden09:CSE,}.
 % ================================================================================
 \section*{Management of Research Data} \label{sec:data_management}
 
-Principles \cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}
+The systematic management of research data is an important prerequisite for open and 
+reproducible science. This covers the internal as well as public handling of data, whereas
+the term research data is not restricted to electronic resources. The following principles
+for research data management have been compiled from the recommendations given in~\cite{DFG_GWP:Book,HRK_FDM:WWW,Stodden2014:JORS,H2020_FAIR:ERC}
 \begin{itemize}
 \item develop a comprehensive data management plan
 \item use workflow tracking in the research process
-\item make data findable, accessible, interoperable and reusable (FAIR)
+\item make data findable, accessible, interoperable and reusable (FAIR)~\cite{H2020_FAIR:ERC}
 \item apply open licensing models
 \item offer training and qualification
 \end{itemize}
+The data management should document the data raised and processed, its handling and
+archival. The use of workflow tracking (e.g. SVN, git) makes the research process transparent 
+and allows to discover for instance the source of problems. The FAIR policy in conjunction with
+open licensing models promotes the re-use of published data. Training and qualification is an
+essential cornerstone of an advanced data management strategy. It should highlight the importance
+of data management and should introduce the data management plan as well as the tools used for
+its realization.
+
+Note, the instantiation of appropriate data management measures is already mandatory in a number 
+of funding schemes.
 
 
 % ================================================================================
